--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Streamlit Web App</title>
+    <title>Geospatial App</title>
     <style type="text/css">
       html {
         overflow: auto;
@@ -26,7 +26,7 @@
   </head>
   <body>
     <iframe
-      src="https://share.streamlit.io/giswqs/streamlit-template"
+      src="https://share.streamlit.io/ham811/streamlit-template"
       frameborder="0"
       marginheight="0"
       marginwidth="0"
